--- a/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part1_gradle_init_plugin.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part1_gradle_init_plugin.adoc
@@ -15,39 +15,41 @@
 [[part1_gradle_init]]
 = Part 1: Initializing the Project
 
-Learn the basics of developing Gradle plugins starting with Gradle init.
+Learn the basics of developing Gradle plugins starting with `gradle init`.
 
 ****
-**In this section, you will:**
+**In this section, you'll:**
 
-- Initialize a Gradle plugin project
-- Review the directory layout and existing Hello World plugin
-- Learn about what we will transform this plugin into
-- Set up the Slack Client API
+- Initialize a Gradle plugin project with `gradle init`.
+- Review the generated project structure and files.
+- Understand the "Hello, World" plugin that was automatically created for you.
+- Get a clear picture of the Slack Notification plugin we're going to build.
+- Set up the necessary Slack Client API credentials.
 ****
 
 [[part1_begin]]
-== Step 0. Before you Begin
+== Step 0: Before you Begin
 
-1. Make sure you have <<installation.adoc#installation,Gradle installed>>.
+Before we start, make sure you have everything you need:
 
-2. Install link:https://www.jetbrains.com/idea/download/[IntelliJ IDEA].
-The Community Edition is a free version of IntelliJ IDEA.
+1.  **Gradle Installed**: Check that you have Gradle installed by running `gradle -v` in your terminal. If not, follow the link to the <<installation.adoc#installation,installation guide>>.
 
-== Step 1. Initializing the Project
+2.  **IntelliJ IDEA**: Install the free link:https://www.jetbrains.com/idea/download/[IntelliJ IDEA Community Edition]. It's a great tool for working with Gradle projects.
 
-Create a new directory called `plugin-tutorial` and `cd` into it:
+== Step 1: Initializing the Project
+
+Let's get started by creating our project.
+
+First, create a new directory called `plugin-tutorial` and navigate into it:
 
 [source,text]
 ----
 $ mkdir plugin-tutorial
-----
-[source,text]
-----
 $ cd plugin-tutorial
 ----
 
-Run `gradle init` with the parameters detailed below to generate a plugin:
+Now, run the `gradle init` command to automatically generate a basic plugin project.
+You can specify the language you want.
 
 [.multi-language-sample]
 =====
@@ -64,15 +66,16 @@ $ gradle init --type groovy-gradle-plugin  --dsl groovy
 ----
 =====
 
-Select defaults for any additional prompts.
+When prompted for additional options, just accept the default values.
 
-NOTE: In this tutorial, all examples are macOS based.
+NOTE: All examples in this tutorial are based on a macOS environment.
 
-== Step 2. Understanding the Directory layout
+== Step 2: Understanding the Project Layout
 
-The *project root directory* contains all source files from your project.
+After `gradle init` finishes, you'll have a new project structure.
+The `plugin-tutorial` directory is our *root project*, and inside, there's a subproject named `plugin` where we'll do most of our work.
 
-When you are done with Gradle `init`, the directory should look as follows:
+The project should look like this:
 
 [.multi-language-sample]
 =====
@@ -101,14 +104,14 @@ When you are done with Gradle `init`, the directory should look as follows:
                 └── org/example
                     └── PluginTutorialPluginFunctionalTest.kt
 ----
-<1> Generated folder for wrapper files
-<2> Version catalog for dependencies
-<3> Gradle wrapper start scripts
-<4> Settings file to define build name and subprojects
-<5> Build script for `plugin` subproject
-<6> Default source folder for the plugin
-<7> Default test source folder for the plugin
-<8> Default functional test source folder for the plugin
+<1> This folder holds the wrapper files that allow us to run Gradle without a local installation.
+<2> This is a **version catalog**, a tool for managing all your project's dependencies in one place.
+<3> These are the Gradle wrapper scripts for macOS/Linux and Windows.
+<4> This file defines the name of our build and includes our `plugin` subproject.
+<5> The build script for our `plugin` subproject. This is where we'll add our dependencies and configure the plugin.
+<6> The default source folder for our new plugin.
+<7> The default folder for unit tests.
+<8> The default folder for functional tests.
 =====
 [.multi-language-sample]
 =====
@@ -137,61 +140,63 @@ When you are done with Gradle `init`, the directory should look as follows:
                 └── org/example
                     └── PluginTutorialPluginFunctionalTest.groovy
 ----
-<1> Generated folder for wrapper files
-<2> Version catalog for dependencies
-<3> Gradle wrapper start scripts
-<4> Settings file to define build name and subprojects
-<5> Build script for `plugin` subproject
-<6> Default source folder for the plugin
-<7> Default test source folder for the plugin
-<8> Default functional test source folder for the plugin
+<1> This folder holds the wrapper files that allow us to run Gradle without a local installation.
+<2> This is a **version catalog**, a tool for managing all your project's dependencies in one place.
+<3> These are the Gradle wrapper scripts for macOS/Linux and Windows.
+<4> This file defines the name of our build and includes our `plugin` subproject.
+<5> The build script for our `plugin` subproject. This is where we'll add our dependencies and configure the plugin.
+<6> The default source folder for our new plugin.
+<7> The default folder for unit tests.
+<8> The default folder for functional tests.
 =====
 
-The `plugin-tutorial` folder is the *root project directory*.
-Inside the root project directory, there is a `plugin` subproject.
+== Step 3: Review the Gradle Build File
 
-== Step 3. Review the Gradle Build File
+Let's take a look at the `build.gradle(.kts)` file inside the `plugin` directory.
+This is where the magic happens.
 
-The most interesting thing to note is in the `build.gradle(.kts)`.
-When you're writing a binary Gradle plugin, meaning a plugin implemented in Java, Kotlin, or Groovy, and you want Gradle to:
+When you're writing a plugin, you'll use the `java-gradle-plugin` to:
 
-1. Automatically generate plugin metadata
-2. Add plugin development conventions
-3. Simplify publishing
+1.  Automatically generate the necessary plugin metadata.
+2.  Add plugin development conventions and tasks.
+3.  Simplify the publishing process.
 
-You should apply the `java-gradle-plugin` plugin and configure it using the `gradlePlugin {}` block:
+This is what the `gradlePlugin {}` block looks like:
 
 ====
 include::sample[dir="snippets/plugins/plugin-tutorial/kotlin",files="plugin/build.gradle.kts[tags=plugin-init]"]
 include::sample[dir="snippets/plugins/plugin-tutorial/groovy",files="plugin/build.gradle[tags=plugin-init]"]
 ====
 
-* `gradlePlugin {}`: This tells Gradle that you're authoring a plugin and want to configure its metadata.
-* `val greeting by plugins.creating { ... }`: This registers a new plugin definition with the name `greeting`.
-* `id = "org.example.greeting"`: This is the plugin ID that users will apply in their build scripts.
-* `implementationClass = "org.example.PluginTutorialPlugin"`: This points to the class that implements the plugin's logic by extending `Plugin<Project>`.
+* `gradlePlugin {}`: This is where you configure the plugins you're authoring.
+* `val greeting by plugins.creating { ... }`: This registers a new plugin definition with the ID `org.example.greeting`.
+* `implementationClass = "org.example.PluginTutorialPlugin"`: This points to the main class that contains your plugin's logic.
 
-== Step 4. Review the Plugin Code
+== Step 4: Review the Plugin Code
 
-In `plugin/src/main/kotlin/org/example/PluginTutorialPlugin.kt` you will find a rudimentary plugin generated by Gradle init:
+The plugin code is a simple "Hello, World!" example that `gradle init` generated for us.
+[.multi-language-text.lang-kotlin]
+----
+You can find it at `plugin/src/main/kotlin/org/example/PluginTutorialPlugin.kt`:
+----
+[.multi-language-text.lang-groovy]
+----
+You can find it at `plugin/src/main/groovy/org/example/PluginTutorialPlugin.groovy`:
+----
 
 ====
 include::sample[dir="snippets/plugins/plugin-tutorial/kotlin",files="plugin/src/main/kotlin/org/example/PluginTutorialPlugin.kt[]"]
 include::sample[dir="snippets/plugins/plugin-tutorial/groovy",files="plugin/src/main/groovy/org/example/PluginTutorialPlugin.groovy[]"]
 ====
 
-* `Plugin<Project>`: This tells Gradle that the plugin works with `Project` objects.
-* `apply()`: Gradle calls this when the plugin is applied to a project.
-* `tasks.register("greeting")`: Registers a new task that users can run with `./gradlew greeting`.
-* `doLast {}`: Defines the action that happens when the task executes.
+* `Plugin<Project>`: Our plugin needs to implement this interface to work with a `Project` object.
+* `apply()`: This method is the entry point. Gradle calls it when the plugin is applied to a project.
+* `tasks.register("greeting")`: This is how we register a new task. Users can run it from the command line with `./gradlew greeting`.
+* `doLast {}`: This block contains the code that runs when the task is executed.
 
-== Step 5. Understand the Plugin
+== Step 5: Understand the Plugin's Behavior
 
-This plugin is a simple “Hello, World!” Gradle plugin.
-
-It defines a single task named `greeting`.
-
-When you apply the plugin (with ID `org.example.greeting`):
+To see the plugin in action, you can apply the plugin using its ID (`org.example.greeting`) in a `plugins` block:
 
 [source,text]
 ----
@@ -200,14 +205,7 @@ plugins {
 }
 ----
 
-It registers a task like this:
-
-[source,text]
-----
-./gradlew greeting
-----
-
-When the `greeting` task runs, it prints the following message to the console:
+After applying it, running the `greeting` task with `./gradlew greeting` will produce the following output:
 
 [source,text]
 ----
@@ -216,28 +214,31 @@ Hello from plugin 'org.example.greeting'
 
 == Step 6: What we will Build
 
-With the remainder of this tutorial, you will build the *Slack Notification Gradle Plugin*.
-A lightweight Gradle plugin that posts your build results to Slack.
+This tutorial will guide you in building a powerful **Slack Notification Gradle Plugin**. This plugin will make it easy to automatically report your build results to a Slack channel.
 
-The plugin can:
+The finished plugin will be able to:
 
-- Post a custom Slack message using a simple task (`sendTestSlackMessage`).
-- Automatically report build success or failure at the end of the build.
-- Seamlessly integrate with Gradle’s lifecycle via a `BuildService`, or a `BuildListener`, or the modern `FlowAction` API.
+* Send a custom Slack message with a simple task (`sendTestSlackMessage`).
+* Automatically report build success or failure at the end of the build.
+* Integrate seamlessly with the build lifecycle using modern Gradle APIs like `FlowAction`.
 
-== Step 7. Slack Client API Setup
+== Step 7: Slack Client API Setup
 
-We will be using the link:https://docs.slack.dev/tools/java-slack-sdk/guides/web-api-client-setup[Slack API Client] for this tutorial.
-You will need:
+To get started, you'll need to set up the Slack API Client.
 
-1. A link:https://slack.com/help/articles/218080037-Getting-started-for-new-Slack-users[Slack Account].
-2. A link:https://slack.com/help/articles/206845317-Create-a-Slack-workspace[Slack Workspace] you can administer (you *must* have administrative priviledges).
-3. A link:https://api.slack.com/apps[Slack App]:
- ** Select "Create An App" -> "From Manifest" -> Accept the defaults.
- ** This will create a "Demo App".
- ** Create a token for your App in "OAuth & Permissions" and make sure the "Bot Token Scope" includes `chat:write`.
- ** Then select "Install App".
- ** Your App should be installed in your Workspace and a token should have been generated that starts with `xoxb-`. Make sure to keep this token handy.
+1.  **Get a Slack Account and Workspace**: If you don't have one, create a link:https://slack.com/help/articles/218080037-Getting-started-for-new-Slack-users[Slack Account] and a link:https://slack.com/help/articles/206845317-Create-a-Slack-workspace[Slack Workspace] where you have administrative privileges.
+
+2.  **Create a Slack App**:
+* Navigate to the link:https://api.slack.com/apps[Slack App creation page].
+* Select "Create An App" -> "From Manifest" and accept the defaults to create a "Demo App".
+
+3.  **Configure Permissions and Get Your Token**:
+* Go to "OAuth & Permissions" in your app's settings.
+* Under "Bot Token Scopes," click "Add an OAuth Scope" and select `chat:write`. This gives your app permission to post messages.
+* Select "Install App" to install it in your workspace.
+* A **Bot User OAuth Token** will be generated. It will start with `xoxb-`. **Be sure to save this token!** It's what we'll use to authenticate our plugin's API calls.
+
+You're all set! Now you have a working Gradle plugin project and all the tools you need to connect to Slack.
 
 [.text-right]
 **Next Step:** <<part2_add_extension.adoc#part2_add_extension,Add an Extension>> >>
