--- a/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part2_add_extension.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part2_add_extension.adoc
@@ -15,39 +15,43 @@
 [[part2_add_extension]]
 = Part 2: Add an Extension
 
-Learn about extensions and how to add them to your plugin.
+Learn about extensions and how to add them to your plugin to make it configurable.
 
 ****
-**In this section, you will:**
+**In this section, you'll:**
 
-- Understand Plugin Extensions
-- Add an Extension to the Slack Plugin
+- Understand what plugin extensions are and why they are useful.
+- Add an extension class to your plugin with configurable properties.
+- Register the extension to make it available to users in their build scripts.
 ****
 
 [[part2_begin]]
-== Step 0. Before you Begin
+== Step 0: Before you Begin
 
 1. You initialized your plugin in <<part1_gradle_init_plugin.adoc#part1_begin,part 1>>.
 
-== Step 1. Understanding Plugin Extensions
+== Step 1: Understanding Plugin Extensions
 
-A plugin extension is a block users can configure in their `build.gradle(.kts)` file to customize how the plugin behaves.
-It lets you expose settings like:
+A **plugin extension** is a powerful feature that allows users to configure your plugin using a declarative DSL block in their `build.gradle(.kts)` file.
+This keeps plugin configuration clean and easy to read.
+
+For example, a user could configure your plugin like this:
 
 [source,text]
 ----
-greeting {
-    message.set("Hi")
-    recipient.set("CI Server")
+slack {
+    token.set("...")
+    channel.set("#builds")
+    message.set("Build completed!")
 }
 ----
 
-Behind the scenes, this block maps to a Kotlin/Java class with properties.
-Gradle injects values set by the user into the plugin logic.
+Behind the scenes, this `slack { ... }` block maps directly to a Kotlin or Groovy class with properties.
+Gradle handles the magic of injecting the values into your plugin's logic.
 
-== Step 2. Rename the Plugin Class
+== Step 2: Rename the Plugin Class
 
-First, let's rename the Plugin class of our 'Hello World' example from the Gradle init default.
+First, let's rename our plugin class from the generic "Hello World" example.
 
 [.multi-language-text.lang-kotlin]
 ----
@@ -58,15 +62,17 @@ Rename the file `plugin/src/main/kotlin/org/example/PluginTutorialPlugin.kt` to 
 Rename the file `plugin/src/main/groovy/org/example/PluginTutorialPlugin.groovy` to `plugin/src/main/groovy/org/example/SlackPlugin.groovy`.
 ----
 
-TIP: In an IDE, renaming the file should update the plugin class automatically.
+TIP: Most modern IDEs, like IntelliJ IDEA, can automatically handle both the file and class name updates for you.
+
+Next, we'll update the class name. The `abstract` keyword is important here because it allows Gradle to use its dependency injection framework to provide the plugin with services it needs, like the `ObjectFactory`.
 
 [.multi-language-text.lang-kotlin]
 ----
-Then, take the class name, `class PluginTutorialPlugin: Plugin<Project> {}`, and update it to `abstract class SlackPlugin: Plugin<Project> {}` so it looks like this:
+Change `class PluginTutorialPlugin: Plugin<Project> {}` to `abstract class SlackPlugin: Plugin<Project> {}`.
 ----
 [.multi-language-text.lang-groovy]
 ----
-Then, take the class name, `class PluginTutorialPlugin implements Plugin<Project> {}`, and update it to `abstract class SlackPlugin implements Plugin<Project> {}` so it looks like this:
+Change `class PluginTutorialPlugin implements Plugin<Project> {}` to `abstract class SlackPlugin implements Plugin<Project> {}`.
 ----
 
 ====
@@ -74,57 +80,38 @@ include::sample[dir="snippets/plugins/plugin-tutorial/kotlin",files="plugin/src/
 include::sample[dir="snippets/plugins/plugin-tutorial/groovy",files="plugin/src/main/groovy/org/example/SlackPlugin.groovy[tags=slack-plugin]"]
 ====
 
-WARNING: Make sure the class is abstract.
-
-You also need to update the build file to reflect the name changes:
+You'll also need to update the `build.gradle(.kts)` file to point to the new plugin class name:
 
 ====
 include::sample[dir="snippets/plugins/plugin-tutorial/kotlin",files="plugin/build.gradle.kts[tags=gradle-plugin]"]
-include::sample[dir="snippets/plugins/plugin-tutorial/groovy",files="plugin/build.gradle.kts[tags=gradle-plugin]"]
+include::sample[dir="snippets/plugins/plugin-tutorial/groovy",files="plugin/build.gradle[tags=gradle-plugin]"]
 ====
 
-== Step 3. Define the Extension Class
+== Step 3: Define the Extension Class
 
-We will create a class that holds user-configurable properties.
-For this we're using Gradle’s `Property<T>` type for laziness and compatibility with the Configuration Cache.
+Now, let's define the class that holds the configurable properties for our plugin. We'll use Gradle's `Property<T>` type for these properties, as this makes them lazy and fully compatible with the Configuration Cache.
 
-Create a file called `plugin/src/main/kotlin/org/example/SlackExtension.kt` and add the following code:
+Create a new file called `plugin/src/main/kotlin/org/example/SlackExtension.kt` and add the following code:
 
 ====
 include::sample[dir="snippets/plugins/plugin-tutorial/kotlin",files="plugin/src/main/kotlin/org/example/SlackExtension.kt[]"]
 include::sample[dir="snippets/plugins/plugin-tutorial/groovy",files="plugin/src/main/groovy/org/example/SlackExtension.groovy[]"]
 ====
 
-This code provides configuration for the plugin with a DSL block:
+This class will provide the configuration for the `slack` DSL block we saw earlier.
 
-[source,text]
-----
-slack {
-    token.set(System.getenv("SLACK_TOKEN"))
-    channel.set("#build-notifications")
-    message.set("Hello from Gradle!")
-}
-----
+== Step 4: Register the Extension in the Plugin
 
-== Step 3. Register the Extension in the Plugin
+The final step is to register the `SlackExtension` in our `SlackPlugin` class. This tells Gradle to create the extension and make it available in the build script.
 
-In order for the plugin to use the extension and provide the DSL block to users, it must *register* the extension.
-
-Add the following code and update your plugin class so it looks like this:
+Let's update the `apply` method to register our new extension and modify the dummy task to use its properties.
 
 ====
 include::sample[dir="snippets/plugins/plugin-tutorial/kotlin",files="plugin/src/main/kotlin/org/example/SlackPlugin.kt[tags=slack-extension]"]
 include::sample[dir="snippets/plugins/plugin-tutorial/groovy",files="plugin/src/main/groovy/org/example/SlackPlugin.groovy[tags=slack-extension]"]
 ====
 
-We've also updated the dummy `greeting` task so it is called `sendTestSlackMessage` and it prints out some of the variable values in the extension.
-
-== Step 4. Benefits of Using Extensions
-
-* Keeps plugin configuration clean and declarative
-* Integrates seamlessly into the build script DSL
-* Encourages reuse and convention-based configuration
-* Supports Gradle's lazy configuration and Configuration Cache
+After this step, a user can configure your plugin, and the `sendTestSlackMessage` task will use those values when it runs.
 
 [.text-right]
-**Next Step:** <<part3_create_custom_task#part3_create_custom_task,Create a Custom Task>> >>
+**Next Step:** <<part3_create_custom_task.adoc#part3_create_custom_task,Create a Custom Task>> >>
