Suggestion from Justin
Co-authored-by: Justin <jvandort@gradle.com>
Signed-off-by: Sterling Greene <big-guy@users.noreply.github.com>

--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -51,7 +51,7 @@ DependencyCollectors can still be instantiated within Gradle <<properties_provid
 [[dependency_management_rules]]
 ==== RuleSource-based dependency management APIs have been deprecated
 
-The link:{javadocPath}/org/gradle/model/RuleSource.html[`RuleSource`] based dependency management APIs have been deprecated and will be removed in Gradle 10.0.0.
+The link:{javadocPath}/org/gradle/model/RuleSource.html[`RuleSource`]-based dependency management APIs have been deprecated and will be removed in Gradle 10.0.0.
 
 These APIs include:
 
