--- a/platforms/documentation/docs/src/docs/userguide/reference/runtime-configuration/build_environment.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/reference/runtime-configuration/build_environment.adoc
@@ -375,23 +375,27 @@ _Default is derived from your environment (`JAVA_HOME` or the path to `java`) if
 
 `org.gradle.java.installations.auto-detect=(true,false)`::
 When set to `true`, Gradle will automatically detect the JDK installations available on the system when locating <<toolchains#toolchains,Java toolchains>>.
+All JDK installation sources are additive, meaning if multiple sources are specified, Gradle will consider all sources when finding JDK installations.
 +
 _Default is `true`._
 
 `org.gradle.java.installations.auto-download=(true,false)`::
 When set to `true`, Gradle will automatically download JDK installations when locating <<toolchains#toolchains,Java toolchains>>.
+All JDK installation sources are additive, meaning if multiple sources are specified, Gradle will consider all sources when finding JDK installations.
 +
 _Default is `true`._
 
 `org.gradle.java.installations.paths=(list of JDK installations)`::
-When set, Gradle will use the specified paths to locate JDK installations when locating <<toolchains#toolchains,Java toolchains>>.
+When set, Gradle will use the specified JDK installation paths when locating <<toolchains#toolchains,Java toolchains>>.
 This setting is a comma-separated list of paths to directories where JDK installations are located.
+All JDK installation sources are additive, meaning if multiple sources are specified, Gradle will consider all sources when finding JDK installations.
 +
-_Default is empty, meaning Gradle will use the default locations to find JDK installations._
+_Default is empty, meaning Gradle will not use any explicitly declared paths to find JDK installations._
 
 `org.gradle.java.installations.fromEnv=(list of environment variables)`::
 When set, Gradle will use the JDK installations specified in the listed environment variables when locating <<toolchains#toolchains,Java toolchains>>.
 This setting is a comma-separated list of environment variable names.
+All JDK installation sources are additive, meaning if multiple sources are specified, Gradle will consider all sources when finding JDK installations.
 +
 _Default is empty, meaning Gradle will not use any environment variables to find JDK installations._
 
